--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- <h1>TODO APP</h1> -->
+    <h1>TODO APP</h1>
     <section id="container">
       <div class="taskList">
         <input type="text" name="taskName" />
